modules/vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-vpc"
  }
}


/////////////////////////////


//////////////////////////////

data "aws_availability_zones" "available" {
  state    = "available"
}
